test/corpus/hello_world.txt
===============|||
Hello world
===============|||
>+++++++++[<++++++++>-]<.>+++++++[<++++>-]<+.+++++++..+++.[-]
>++++++++[<++++>-]<.>+++++++++++[<++++++++>-]<-.--------.+++
.------.--------.[-]>++++++++[<++++>-]<+.[-]++++++++++.
---|||

(program
  (move_right)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (loop
    (move_left)
    (increment)
    (increment)
    (increment)
    (increment)
    (increment)
    (increment)
    (increment)
    (increment)
    (move_right)
    (decrement))
  (move_left)
  (output)
  (move_right)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (loop
    (move_left)
    (increment)
    (increment)
    (increment)
    (increment)
    (move_right)
    (decrement))
  (move_left)
  (increment)
  (output)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (output)
  (output)
  (increment)
  (increment)
  (increment)
  (output)
  (loop
    (decrement))
  (comment)
  (move_right)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (loop
    (move_left)
    (increment)
    (increment)
    (increment)
    (increment)
    (move_right)
    (decrement))
  (move_left)
  (output)
  (move_right)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (loop
    (move_left)
    (increment)
    (increment)
    (increment)
    (increment)
    (increment)
    (increment)
    (increment)
    (increment)
    (move_right)
    (decrement))
  (move_left)
  (decrement)
  (output)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (output)
  (increment)
  (increment)
  (increment)
  (comment)
  (output)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (output)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (decrement)
  (output)
  (loop
    (decrement))
  (move_right)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (loop
    (move_left)
    (increment)
    (increment)
    (increment)
    (increment)
    (move_right)
    (decrement))
  (move_left)
  (increment)
  (output)
  (loop
    (decrement))
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (increment)
  (output))
